--- a/src/app/components/modals/oil/delete-oil-modal/delete-oil-modal.component.html
+++ b/src/app/components/modals/oil/delete-oil-modal/delete-oil-modal.component.html
@@ -7,7 +7,7 @@
           <h5>Brand - {{title}}</h5>
           <h5>Scent - {{subTitle}}</h5>
           <h5>Quantity - {{quantity}}</h5>
-          <h5>Price per unit - {{price}}</h5>
+          <h5>Price per unit - {{price}}$</h5>
         </div>
         <div class="col-6">
           <img [src]="imageUrl">
