--- a/src/app/components/modals/balm/delete-balm-modal/delete-balm-modal.component.html
+++ b/src/app/components/modals/balm/delete-balm-modal/delete-balm-modal.component.html
@@ -1,1 +1,24 @@
-<p>delete-balm-modal works!</p>
+<div class="modal-container">
+    <div class="modal-card">
+      <h4 class="mt-2" >Sure you want to delete this product?</h4>
+      <hr>
+      <div class="row">
+        <div class="col-6">
+          <h5>Brand - {{title}}</h5>
+          <h5>Volume - {{subTitle}}g</h5>
+          <h5>Quantity - {{quantity}}</h5>
+          <h5>Price per unit - {{price}}$</h5>
+        </div>
+        <div class="col-6">
+          <img [src]="imageUrl">
+        </div>
+      </div>
+
+      <div class="btn-container modal-footer">
+        <button class="btn btn-secondary" (click)="closeMe()">Close</button>
+        <button class="btn btn-danger" (click)="confirm()">Confirm</button>
+      </div>
+    </div>
+  </div>
+
+
