--- a/src/app/pages/balms/admin-balms/admin-balms.component.html
+++ b/src/app/pages/balms/admin-balms/admin-balms.component.html
@@ -1,1 +1,8 @@
-<p>admin-balms works!</p>
+<button class="btn btn-primary m-3" (click)="openCreateBalmModal()">Create Balm</button>
+
+<ng2-smart-table class="table" [settings]="settings" [source]="source" (custom)="onAction($event)"></ng2-smart-table>
+<div class="modal-container">
+  <div #deleteBalmModal></div>
+  <div #createBalmModal></div>
+  <div #editBalmModal></div>
+</div>
