--- a/src/app/components/modals/balm/edit-balm-modal/edit-balm-modal.component.html
+++ b/src/app/components/modals/balm/edit-balm-modal/edit-balm-modal.component.html
@@ -1,1 +1,75 @@
-<p>edit-balm-modal works!</p>
+<div class="modal-container">
+    <div class="modal-card">
+        <h3 class="p-2">Edit Balm</h3>
+        <div class="row">
+            <div class="col-6">
+                <div class="m-2 mt-2">
+                    <label for="brand" class="form-label">Brand</label>
+                    <input type="text" id="brand" class="form-control" [value]="model.brand" #brand autocomplete="off">
+                    <p *ngIf="errors.brandValidationError">{{ errors.brandValidationError }}</p>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="m-2">
+                    <label for="volume" class="form-label">Volume</label>
+                    <input type="number" id="volume" class="form-control" #volume [value]="model.volume">
+                    <p *ngIf="errors.volumeValidationError">{{ errors.volumeValidationError }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="m-2">
+                    <label for="quantity" class="form-label">Quantity</label>
+                    <input type="number" id="quantity" class="form-control" [value]="model.unitQuantity" #quantity>
+                    <p *ngIf="errors.quantityValidationError">{{ errors.quantityValidationError }}</p>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="m-2">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea class="form-control" id="desciption" rows="1" [value]="model.description" #description></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="m-2">
+                    <label for="image" class="form-label">Image</label> 
+                    <div class="img-space">
+                        <div class="row">
+                            <div class="col-12">
+                            <input type="file" id="data-image-input" class="form-control" (change)="fileChangeEvent($event)">
+                            <p *ngIf="errors.imageUrlValidationError">{{ errors.imageUrlValidationError }}</p>
+                            <div *ngIf="showImagePanel">
+                                <ng-container *ngIf="!isImageChanged else elseTemplate">
+                                  <img [src]="model.url" class="m-1" />
+                                </ng-container>
+                                <ng-template #elseTemplate>
+                                  <img [src]="changedImageUrl" class="m-1" />
+                                </ng-template>
+                            </div>
+                            </div>
+                        </div> 
+                    </div>
+                    <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="isImageChanged">Remove</a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="m-2">
+                    <label for="price" class="form-label">Price</label>
+                    <input type="number" id="price" class="form-control" [value]="model.unitPrice" #price>
+                    <p *ngIf="errors.priceValidationError">{{ errors.priceValidationError }}</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="btn-container modal-footer">
+            <button class="btn btn-secondary m-2" (click)="closeMe()">Close</button>
+            <button class="btn btn-danger" (click)="confirm(brand.value, volume.value, quantity.value, price.value, description.value)">Confirm</button>
+        </div>
+    </div>
+  </div>
+
+
+
