--- a/src/app/pages/soaps/user-soaps/user-soaps.component.html
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.html
@@ -8,7 +8,7 @@
           </div>
           <div class="row">
             <div class="col-6">
-              <button type="button" id="add-to-card-btn" class="btn btn-primary m-2">Add to card</button>
+              <button type="button" id="add-to-card-btn" class="btn btn-primary m-2" (click)="addToCart(soap)">Add to card</button>
             </div>
             <div class="col-6">
               <button type="button" id="view-details-btn" class="btn btn-secondary m-2">View Details</button>
@@ -17,4 +17,3 @@
         </div>
     </div> 
 </div>
-
