--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,6 +22,10 @@
       <div *ngIf="showUserInfo">
         <h4 class="p-1" style="color: white; margin: 0 0 0 0;">role : {{ userInfo.role }}</h4>
       </div>
+      <button routerLink="cart" class="btn btn-primary">
+        <i class="bi bi-cart3"></i>
+        <div style="font-size: 10px;" class="badge bg-danger">{{totalItem}}</div>
+      </button>
       <form *ngIf="showLogoutButton" class="d-flex">
         <button class="btn btn-primary m-1" type="button" (click)="onLogout()">Logout</button>
       </form>
@@ -29,7 +33,7 @@
         <button class="btn btn-primary m-1" type="button" routerLink="/register">Register</button>
         <button class="btn btn-primary m-1" type="button" routerLink="/signin">Login</button>
       </form>
-      
+
     </div>
   </div>
 </nav>
