--- a/src/app/pages/oils/user-oils/user-oils.component.html
+++ b/src/app/pages/oils/user-oils/user-oils.component.html
@@ -8,7 +8,7 @@
           </div>
           <div class="row">
             <div class="col-6">
-              <button type="button" class="btn btn-primary m-2" style="width: 96%; cursor: pointer;">Add to card</button>
+              <button type="button" class="btn btn-primary m-2" style="width: 96%; cursor: pointer;" (click)="addToCart(oil)">Add to card</button>
             </div>
             <div class="col-6">
               <button type="button" class="btn btn-secondary m-2" style="width: 92%; cursor: pointer;">View Details</button>
