--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -27,8 +27,8 @@
       class="form-control"
       id="password"
       formControlName="password">
-      <span class="errormessage" *ngIf="f['password'].getError('required')!=null">Password is required</span>
-      <span class="errormessage" *ngIf="f['password'].getError('minlength')!=null">Password must be more then 6 characters</span>  
+      <span class="errormessage" *ngIf="f['password'].getError('required')!=null">Password is required</span> 
+      <span class="errormessage" *ngIf="f['password'].getError('pattern')!=null">Password must contain at least 1 special character and 1 number and must be more then 8 characters</span>  
   </div>
 
   <div class="form-group m-2">
