--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,49 +1,55 @@
-<div style="height: 200px">
+<!-- <div style="height: 200px">
 
-</div>
+</div> -->
 
 <div class="row">
-  <div class="col-6">
+  <div class="col-lg-4" style="margin-top: 150px;">
+    <form [formGroup]="form" (ngSubmit)="submit()">
 
+      <div class="form-group m-2">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" formControlName="username" (keyup)="onInputUsername($event)">
+        <div *ngIf="showUsernameErrors">
+          <span class="errormessage" *ngIf="f['username'].getError('required')!=null">Username is required</span>
+          <span class="errormessage" *ngIf="f['username'].getError('pattern')!=null">Username must be more then 3 characters and less then 15</span>
+        </div>
+      </div>
+
+      <div class="form-group m-2">
+        <label for="email">Email</label>
+        <input  class="form-control" formControlName="email" (keyup)="onInputEmail($event)">
+        <div *ngIf="showEmailErrors">
+          <span class="errormessage" *ngIf="f['email'].getError('email')!=null">Invalid email</span>
+          <span class="errormessage" *ngIf="f['email'].getError('required')!=null">Email is required</span>
+        </div>
+      </div>
+    
+      <div class="form-group m-2">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="password" (keyup)="onInputPassword($event)">
+          <div *ngIf="showPasswordErrors">
+            <span class="errormessage" *ngIf="f['password'].getError('required')!=null">Password is required</span> 
+            <span class="errormessage" *ngIf="f['password'].getError('pattern')!=null">Password must contain at least 1 special character and 1 number and must be more then 8 characters</span>
+          </div>
+      </div>
+    
+      <div class="form-group m-2">
+        <label for="confirmPassword">Confirm password</label>
+        <input type="password" class="form-control" id="confirmPassword" formControlName="confirm_password" (keyup)="onInputConfPassword($event)">
+          <div *ngIf="showConfirmPasswordErrors">
+            <span class="errormessage" *ngIf="f['confirm_password'].getError('required')!=null">Confirm password is required</span>
+            <span class="errormessage" *ngIf="f['confirm_password'].getError('confirmedValidator')!=null">Password and confirm password must match</span>
+          </div>   
+      </div>
+    
+    
+      <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+    </form>
+  </div>
+  <div class="col-lg-6">
+    <img src="https://app.imgforce.com/images/user/VbZ_1670930473_obey-the-beard.jpg" style="width: 100%; height: 100%; margin-left: 200px;">
   </div>
 
 </div>
 
-<form [formGroup]="form" (ngSubmit)="submit()">
 
-  <div class="form-group m-2">
-    <label for="username">Username</label>
-    <input type="text" class="form-control" formControlName="username">
-    <span class="errormessage" *ngIf="f['username'].getError('required')!=null">Username is required</span>
-    <span class="errormessage" *ngIf="f['username'].getError('minlength')!=null">Username must be more then 3 characters</span>  
-    <span class="errormessage" *ngIf="f['username'].getError('maxlength')!=null">Username must be less then 15 characters</span>  
-
-  </div>
-
-  <div class="form-group m-2">
-    <label for="password">Password</label>
-    <input 
-      type="password" 
-      class="form-control"
-      id="password"
-      formControlName="password">
-      <span class="errormessage" *ngIf="f['password'].getError('required')!=null">Password is required</span> 
-      <span class="errormessage" *ngIf="f['password'].getError('pattern')!=null">Password must contain at least 1 special character and 1 number and must be more then 8 characters</span>  
-  </div>
-
-  <div class="form-group m-2">
-    <label for="confirmPassword">Confirm password</label>
-    <input 
-      type="password" 
-      class="form-control"
-      id="confirmPassword"
-      formControlName="confirm_password">
-      <span class="errormessage" *ngIf="f['confirm_password'].getError('required')!=null">Confirm password is required</span>
-      <span class="errormessage" *ngIf="f['confirm_password'].getError('confirmedValidator')!=null">Password and confirm password must match</span>
-
-      
-  </div>
-
-
-  <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
-</form>
