--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,9 +1,5 @@
-<!-- <div style="height: 200px">
-
-</div> -->
-
-<div class="row">
-  <div class="col-lg-4" style="margin-top: 150px;">
+<div class="row vh-100">
+  <div class="col-lg-4" style="margin-top: 350px; padding-left: 60px;">
     <form [formGroup]="form" (ngSubmit)="submit()">
 
       <div class="form-group m-2">
@@ -47,7 +43,7 @@
     </form>
   </div>
   <div class="col-lg-6">
-    <img src="https://app.imgforce.com/images/user/VbZ_1670930473_obey-the-beard.jpg" style="width: 100%; height: 100%; margin-left: 200px;">
+    <img src="https://app.imgforce.com/images/user/VbZ_1670930473_obey-the-beard.jpg" style="width: 800px; height: 800px; margin-left: 250px; margin-top: 100px;">
   </div>
 
 </div>
