--- a/src/app/components/modals/add-to-cart-warning/add-to-cart-warning.component.html
+++ b/src/app/components/modals/add-to-cart-warning/add-to-cart-warning.component.html
@@ -4,13 +4,14 @@
       <h4 class="mt-2">Add to cart note!</h4>
       <hr>
       <div class="row" style="text-align: center;">
-        <p>To use <strong>"Add to cart"</strong> functionality,</p>
-        <p>make sure you are first logged in!</p>
+        <p>Make sure you are first logged in!</p>
       </div>
 
       <div class="modal-footer" style="text-align: center;">
-        <button class="btn btn-primary" (click)="closeMe()">Close</button>
+        <button class="btn btn-danger" (click)="confirm()">Go to Login</button>
       </div>
+
+
     </div>
   </div>
 
