successful purchase modal and logic

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -60,4 +60,7 @@
 
 <div class="modal-container">
     <div #addToCartWarningModal></div>
-  </div>
+</div>
+<div class="modal-container">
+    <div #addToCartSuccessfulPurchaseModal></div>
+</div>
