--- a/src/app/components/modals/add-to-cart-successful-purchase/add-to-cart-successful-purchase.component.html
+++ b/src/app/components/modals/add-to-cart-successful-purchase/add-to-cart-successful-purchase.component.html
@@ -1,10 +1,10 @@
 <div class="modal-container">
     <div class="modal-card" >
-      <h4 class="mt-2">Add to cart note!</h4>
+      <h4 class="mt-2">Success</h4>
       <hr>
       <div class="row" style="text-align: center;">
-        <p>Sucess!!</p>
+        <p>Thank You for Shopping</p>
       </div>
-
+      <h1>{{mytime}}</h1>
     </div>
   </div>
