--- a/src/app/components/modals/add-to-cart-successful-purchase/add-to-cart-successful-purchase.component.html
+++ b/src/app/components/modals/add-to-cart-successful-purchase/add-to-cart-successful-purchase.component.html
@@ -5,6 +5,6 @@
       <div class="row" style="text-align: center;">
         <p>Thank You for Shopping</p>
       </div>
-      <h1>{{mytime}}</h1>
+      <h1>{{sec}}</h1>
     </div>
   </div>
