--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,3 +1,4 @@
+
 <ng-container *ngIf="products.length !=0">
     <div class="container">
         <div class="card-table">
@@ -43,17 +44,16 @@
 </ng-container>
 
 
-<ng-container *ngIf="products.length ==0">
-    <div class="container">
-        <div class="card">
+<ng-container style="margin: 500px" *ngIf="products.length == 0">
+    <div class="container mt-4">
+        <!-- <div class="card">
             <h5 class="card-title">My Cart</h5>
-        </div>
-        <div class="center">
-            <img src="https://rukminim1.flixcart.com/www/800/800/promos/16/05/2019/d438a32e-765a-4d8b-b4a6-520b560971e8.png?q=90" alt="">
+        </div> -->
+        <div style="text-align: center;">
+            <img src="https://rukminim1.flixcart.com/www/800/800/promos/16/05/2019/d438a32e-765a-4d8b-b4a6-520b560971e8.png?q=90">
             <h4>Your cart is empty!</h4>
             <h6>Add item to it now</h6>
-            <button routerLink="/products" class="btn btn-primary">Shop Now</button>
-
+            <button routerLink="/soaps" class="btn btn-primary m-3">Shop Now</button>
         </div>
     </div>
 </ng-container>
