--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -10,23 +10,29 @@
                             <th>Product Name</th>
                             <th>Product Image</th>
                             <th>Description</th>
+                            <th>Unit Price</th>
+                            <th>Quantity</th>
                             <th>Price</th>
-                            <!-- <th>Quantity</th> -->
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of products; let i = index">
-                            <td>{{i+1}}</td>
-                            <td>{{item.brand}}</td>
-                            <td><img style="width: 120px;" [src]="item.url" alt=""></td>
+                            <td style="width: 5%;">{{i + 1}}</td>
+                            <td style="width: 15%;">{{ item.brand }}</td>
+                            <td><img style="width: 220px;" [src]="item.url" alt=""></td>
                             <td style="width: 25%;">{{item.description}}</td>
-                            <th style="width: 12%;">{{item.unitPrice}}</th>
-                            <!-- <td style="width: 12%;">{{item.unitQuantity}}</td> -->
+                            <th style="width: 10%;">{{item.unitPrice}}$</th>
+                            <th style="width: 10%;">
+                                <span *ngIf="item.showLeftArrow" (click)="leftArrow(item)"><i class="bi bi-dash-square"></i></span>
+                                    {{item.quantity}}
+                                <span *ngIf="item.showRightArrow" (click)="rightArrow(item)"><i class="bi bi-plus-square"></i></span>
+                            </th>
+                            <th style="width: 10%;">{{item.quantity * item.unitPrice}}$</th>
                             <td>
                                 <button (click)="removeItem(item)" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                             </td>
-                            <td style="width: 12%;">{{item.total}}</td>
+                            <td style="width: 30%;">{{item.total}}</td>
 
                         </tr>
                         <tr>
@@ -34,7 +40,7 @@
                             <td><button (click)="emptycart()" class="btn btn-danger">Empty Cart</button></td>
                             <td><button routerLink="/soaps" class="btn btn-primary">Shop More</button></td>
                             <td><button class="btn btn-success" (click)="checkOut()">Checkout</button></td>
-                            <td><strong>Grand Total : ${{grandTotal}}</strong></td>
+                            <td><strong>Grand Total : {{ grandTotal }}$</strong></td>
                         </tr>
                     </tbody>
                 </table>
