--- a/src/app/components/modals/add-to-cart-successful-purchase/add-to-cart-successful-purchase.component.html
+++ b/src/app/components/modals/add-to-cart-successful-purchase/add-to-cart-successful-purchase.component.html
@@ -5,6 +5,8 @@
       <div class="row" style="text-align: center;">
         <p>Thank You for Shopping</p>
       </div>
-      <h1>{{sec}}</h1>
+      <div style="text-align: center;">
+        <h1>{{ sec }} seconds</h1>
+      </div>
     </div>
   </div>
