--- a/src/app/pages/balms/user-balms/user-balms.component.html
+++ b/src/app/pages/balms/user-balms/user-balms.component.html
@@ -3,7 +3,7 @@
         <div class="card modal-card">
           <img [src]="balm.url" class="card-img-top" height="350px">
           <div class="card-body">
-            <h4>{{balm.brand}}</h4>
+            <h5>{{ balm.brand }}, {{ balm.volume }}mg</h5>
             <p [id]="balm.id" class="card-text">{{ balm.description | truncate : 125 }}<span (click)="loadmore(balm.id)">load more</span></p>
             <h6>Price: {{ balm.unitPrice }}$</h6>
           </div>
