--- a/src/app/pages/oils/user-oils/user-oils.component.html
+++ b/src/app/pages/oils/user-oils/user-oils.component.html
@@ -3,7 +3,7 @@
         <div class="card"  style="width: auto; box-shadow: 5px 10px 8px #888888;">
           <img [src]="oil.url" class="card-img-top" height="350px">
           <div class="card-body">
-            <h4>{{ oil.brand }}, {{ oil.scent }}</h4>
+            <h5>{{ oil.brand }}, {{ oil.scent }}, {{ oil.liquidVolume }}ml</h5>
             <p [id]="oil.id" class="card-text">{{ oil.description | truncate : 125 }}<span (click)="loadmore(oil.id)">load more</span></p>
             <h6>Price: {{ oil.unitPrice }}$</h6>
           </div>
