--- a/src/app/pages/soaps/user-soaps/user-soaps.component.html
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.html
@@ -7,12 +7,9 @@
             <p [id]="soap.id" class="card-text">{{ soap.description | truncate : 125 }}<span (click)="loadmore(soap.id)">load more</span></p>
             <h6>Price: {{ soap.unitPrice }}$</h6>
           </div>
-          <div class="row">
-            <div class="col-6">
-              <button type="button" id="add-to-card-btn" class="btn btn-primary m-2" (click)="addToCart(soap)">Add to card</button>
-            </div>
-            <div class="col-6">
-              <button type="button" id="view-details-btn" class="btn btn-secondary m-2">View Details</button>
+          <div class="row m-3">
+            <div class="col-12">
+              <button type="button" id="add-to-card-btn" class="btn btn-primary" (click)="addToCart(soap)">Add to card</button>
             </div>
           </div>
         </div>
