--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -10,6 +10,7 @@
                             <th>Product Name</th>
                             <th>Product Image</th>
                             <th>Description</th>
+                            <th>In Stock</th>
                             <th>Unit Price</th>
                             <th>Quantity</th>
                             <th>Price</th>
@@ -20,12 +21,13 @@
                         <tr *ngFor="let item of products; let i = index">
                             <td style="width: 5%;">{{i + 1}}</td>
                             <td style="width: 15%;">{{ item.brand }}</td>
-                            <td><img style="width: 220px;" [src]="item.url" alt=""></td>
-                            <td style="width: 25%;">{{item.description}}</td>
+                            <td><img style="width: 220px;" [src]="item.url" alt="asdasd"></td>
+                            <td style="width: 25%;">{{ item.description }}</td>
+                            <td style="width: 10%;">{{ item.unitQuantity }}</td>
                             <th style="width: 10%;">{{item.unitPrice}}$</th>
                             <th style="width: 10%;">
                                 <span (click)="leftArrow(item)"><i class="bi bi-dash-square"></i></span>
-                                    {{item.quantity}}
+                                    {{ item.quantity }}
                                 <span (click)="rightArrow(item)"><i class="bi bi-plus-square"></i></span>
                             </th>
                             <th style="width: 10%;">{{item.quantity * item.unitPrice}}$</th>
