--- a/src/app/pages/soaps/user-soaps/user-soaps.component.css
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.css
@@ -17,12 +17,7 @@ span {
     cursor: pointer;
 }
 
-#view-details-btn {
-    width: 92%; 
-    cursor: pointer;
-}
 
-  /* Main content */
-  .row {
-    margin-bottom: 30px; /* Add a bottom margin to avoid content overlay */
-  }
+.row {
+    margin-bottom: 30px; 
+}
