--- a/src/app/components/modals/add-to-cart-warning/add-to-cart-warning.component.html
+++ b/src/app/components/modals/add-to-cart-warning/add-to-cart-warning.component.html
@@ -6,12 +6,9 @@
       <div class="row" style="text-align: center;">
         <p>Make sure you are first logged in!</p>
       </div>
-
-      <div class="modal-footer" style="text-align: center;">
-        <button class="btn btn-danger" (click)="confirm()">Go to Login</button>
+      <div class="mb-3" style="text-align: center;">
+        <button  class="btn btn-primary" (click)="confirm()">Go to Login</button>
       </div>
-
-
     </div>
   </div>
 
