--- a/src/app/pages/soaps/user-soaps/user-soaps.component.html
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.html
@@ -4,7 +4,9 @@
           <img [src]="soap.url" class="card-img-top">
           <div class="card-body">
             <h5>{{ soap.brand }}, {{ soap.edition }}</h5>
-            <p [id]="soap.id" class="card-text">{{ soap.description | truncate : 125 }}<span (click)="loadmore(soap.id)">load more</span></p>
+            <p [id]="soap.id" class="card-text">{{ soap.description | truncate : 125 }}
+              <span *ngIf="soap.description.length > 125 ? true : false" (click)="loadmore(soap.id)">load more</span>
+            </p>
             <h6>Price: {{ soap.unitPrice }}$</h6>
           </div>
           <div class="row m-3">
