home page descriptions

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,17 +3,13 @@
     <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-6">
         <img src="https://app.imgforce.com/images/user/jyC_1611618012_soap-2.jpg" style="width: 100%; height: 400px;" >
     </div>
-    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px;">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
+    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px; margin-top: 100px; padding: 50px;">
+        <p>Exclusively Handmade Natural Skin Care Soap Bar for dry skin. Beautiful handcrafted natural skin care soap bar from Organic Goat milk, extra virgin organic Coconut, organic Palm and extra virgin Olive oils</p>
     </div>
 </div>
 <div class="row">
-    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px;">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
+    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px; margin-top: 100px; padding: 50px;">
+        <p>Handmade with 100% natural oils, this beard oil absorbs quickly and gives your beard a smooth, soft, subtle shine. Great for conditioning the skin underneath your beard. Promotes hair growth by helping you maintain a healthy beard. Timber - Mild Scent of Cedar & Fir NeedleMB BEARD OIL TIMBER</p>
     </div>
     <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-6">
         <img src="https://app.imgforce.com/images/user/XHI_1611618063_oil-1.jpg" style="width: 100%; height: 400px;" >
@@ -21,11 +17,9 @@
 </div>
 <div class="row">
     <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-6">
-        <img src="https://app.imgforce.com/images/user/VxA_1611618089_balm-6.jpg" style="width: 100%; height: 400px;" >
+        <img src="https://app.imgforce.com/images/user/DEZ_1673038473_Screenshot_2.png" style="width: 100%; height: 400px;" >
     </div>
-    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px;">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, veritatis! Tempore labore numquam nam tempora eaque rerum enim ab dolorem, accusamus eos cupiditate quo dolorum dolor quasi quod assumenda amet!</p>
+    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px; margin-top: 100px; padding: 50px;">
+        <p>The natural, organic ingredients get deep into the hair and nourishes it from inside and out! It works on long and short beards to condition & soften your hair, improve strength & shine.  Grizzly Adam Beard Balm is the top gentleman’s leave-in beard conditioner and made in the UK. Keeps the straggler hairs at bay & allows you to form a full, beastly beard.  Relieves dry skin & helps moisturize to stop the itch of new hair growth in its tracks</p>
     </div>
 </div>
