--- a/src/app/components/modals/oil/edit-oil-modal/edit-oil-modal.component.html
+++ b/src/app/components/modals/oil/edit-oil-modal/edit-oil-modal.component.html
@@ -67,7 +67,7 @@
                         </div>
                     </div> 
                 </div>
-                <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="isImageChanged">Remove</a>
+                <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="showImagePanel">Remove</a>
             </div>
         </div>
         <div class="btn-container modal-footer">
