--- a/src/app/components/modals/balm/edit-balm-modal/edit-balm-modal.component.html
+++ b/src/app/components/modals/balm/edit-balm-modal/edit-balm-modal.component.html
@@ -52,7 +52,7 @@
                             </div>
                         </div> 
                     </div>
-                    <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="isImageChanged">Remove</a>
+                    <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="showImagePanel">Remove</a>
                 </div>
             </div>
             <div class="col-6">
