--- a/src/app/components/modals/soap/delete-soap-modal/delete-soap-modal.component.html
+++ b/src/app/components/modals/soap/delete-soap-modal/delete-soap-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-container">
     <div class="modal-card">
-      <h4 class="mt-2" style="text-align: center;">Sure you want to delete this product?</h4>
+      <h4 class="mt-2 align-center">Sure you want to delete this product?</h4>
       <hr>
       <div class="row">
         <div class="col-6">
@@ -13,10 +13,14 @@
           <img [src]="imageUrl">
         </div>
       </div>
-
-      <div class="btn-container modal-footer">
-        <button class="btn btn-secondary" (click)="closeMe()">Close</button>
-        <button class="btn btn-danger" (click)="confirm()">Confirm</button>
+      <hr>
+      <div class="row align-center">
+        <div class="col-6">
+          <button class="btn btn-secondary" (click)="closeMe()">Close</button>
+        </div>
+        <div class="col-6">
+          <button class="btn btn-danger" (click)="confirm()">Confirm</button>
+        </div>
       </div>
     </div>
   </div>
