--- a/src/app/components/modals/soap/edit-soap-modal/edit-soap-modal.component.html
+++ b/src/app/components/modals/soap/edit-soap-modal/edit-soap-modal.component.html
@@ -72,3 +72,14 @@
     </div>
   </div>
 
+  <!-- <form action="" (ngSubmit)="onSubmit()">
+    <div class="form-group m-2">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" [value]="model.brand" formControlName="username">
+      <div *ngIf="showUsernameErrors">
+        <span class="errormessage" *ngIf="f['username'].getError('required') != null">Username is required</span>
+        <span class="errormessage" *ngIf="f['username'].getError('pattern') != null">Username must be more then 3 characters and less then 15</span>
+      </div>
+    </div>
+  </form> -->
+
