better delete modal

--- a/src/app/components/modals/balm/create-balm-modal/create-balm-modal.component.html
+++ b/src/app/components/modals/balm/create-balm-modal/create-balm-modal.component.html
@@ -41,14 +41,14 @@
 
         <div class="row">
             <div class="col-6">
-                <div class="m-2">
+                
                     <div class="m-2">
                         <label for="image" class="form-label">Image</label> 
                         <div class="img-space">
                             <div class="row">
                                 <div class="col-12">
                                 <input type="file" id="data-image-input" class="form-control" (change)="fileChangeEvent($event)">
-                                <p>{{imageError}}</p>
+                                <p>{{ imageError }}</p>
                 
                                 <ng-container *ngIf="isImageChosen; else elseTemplate">
                                     <img [src]="cardImageBase64" class="m-1" />
@@ -58,9 +58,9 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="isImageChosen">Remove</a>
+                        <a class="btn btn-outline-danger m-2" (click)="removeImage()" *ngIf="isImageChosen">Remove image</a>
                     </div>
-                </div>
+                
             </div>
             <div class="col-6">
                 <div class="m-2">
@@ -75,7 +75,7 @@
 
         <div class="btn-container modal-footer">
             <button class="btn btn-secondary m-2" (click)="closeMe()">Close</button>
-            <button class="btn btn-danger m-2" 
+            <button class="btn btn-primary m-2" 
             [disabled]="brand.errors || volume.errors || unitPrice.errors || unitQuantity.errors || !isImageChosen" (click)="confirm()">Confirm</button>
         </div>
     </div>
