--- a/src/app/components/modals/oil/delete-oil-modal/delete-oil-modal.component.css
+++ b/src/app/components/modals/oil/delete-oil-modal/delete-oil-modal.component.css
@@ -14,12 +14,13 @@
     align-items: center;
 } 
 
-.btn-container{
-    display: flex;
-} 
+.align-center {
+    text-align: center;
+}
 
 button {
-    margin: 5px;
+    margin: 0 6px 16px 0;
+    width: 80%;
 }
 
 h4 {
